# PSU_Class_Projects

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  functiondescriptions.txt  matrix_addition_CUDA.cpp  matrix_mul_modified.cpp  mini_descrption.txt  vector_init.cpp
AERSP_308H/: Report.docx  ReportFormat.docx  atan2M.m  drag.m  driver.m  lift.m  rankine.m
CMPSC_431W/Assignment_7/: CMakeLists.txt  functions_database.h  functions_field_list.c  functions_linked_list.c  functions_records.c  functions_records.h  functions_schema.c  functions_schema.h  input.txt  main.c  utils.c  utils.h
E_SC_407H/: README.md
E_SC_THESIS/: Salitrik_Thesis.ps  Salitrik_Thesis.tex  UserDefinedCommands.tex  psuthesis.cls
GAME 251/: Mode7_Racer.capx  MultiplayerTest.capx  RageGame.capx
GAME_220/: README.md
GAME_250/: README.md
GAME_251/: 01_MovableSprite.capx  08_Ricoshot.capx  MazeShooter.capx  Platformer.capx  README.md  Ricoshot_Sources.txt
Midterm/: Midterm.sln
Projects/: Program.cs
Quiz Scripts/: Quiz Scripts.sln
STAT_461/: Exam 1 sheet.tex
STAT_462/: hw1.r
STAT_463/: R_code_decomp_smooth-2.docx
data/: data.py
documentation/: acl2015.tex  neural_network.tex
examples/: CSVtoArray.cpp  hadamard_matrix.cu  identity.cu  matrix_addition_CUDA copy.cpp  test_CSVTOARRAY.csv  vectorMultiply.cu
src/: cuda_nn.cpp  cuda_nn.cu  matrix_addition_CUDA.cpp
zz_latex_templates/: OrangeBookTemplate.7z  template-GDD.7z  template-homework-1.7z  template-homework-2.7z  template-newsletter-1.7z  template-poster-1.7z  template-poster-2-(PDFLaTeX).7z  template-report-1.7z  (+5 more)
(+760 files in other folders)
